src/test/ui/main-wrong-location.rs
mod m {
    // An inferred main entry point (that doesn't use #[main])
    // must appear at the top of the crate
    fn main() { }
}
